--- a/index.html
+++ b/index.html
@@ -7,50 +7,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Savvy</title>
     <!-- bootstrap cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css
+    ">
 
     <!-- custom css -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <!-- navbar section start -->
-    <nav class="navbar navbar-expand-lg bg-transparent my-5">
-        <div class="container">
-            <a class="navbar-brand fw-bolder fs-2" href="#">Tech Savvy</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto fw-bold mb-2 mb-lg-0 px-5">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Courses</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Deals</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Success</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-info" href="#">Register</a>
-                    </li>
+    <header class="container">
+        <!-- navbar section start -->
+        <nav class="navbar navbar-expand-lg sticky-top bg-transparent my-3">
+            <div class="container">
+                <a class="navbar-brand fw-bolder fs-2" href="#">Tech Savvy</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto fw-bold mb-2 mb-lg-0 px-5">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Deals</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Success</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link btn btn-outline-info" href="#">Register</a>
+                        </li>
 
-                </ul>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+        <!-- navbar section end -->
+
+        <!-- carousel start -->
+
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/cover/cover-1.png" class="d-block w-100 cover-image" alt="...">
+                    <div class="carousel-caption d-flex flex-column align-items-center mb-5 ">
+                        <h2 class="display-4 w-75 fw-bolder">Get Started Digital
+                            Learning</h2>
+                        <p class="w-75">It is a long established fact that a reader will be distracted by the readable
+                            content of a page when looking at its layout.</p>
+                        <a href=""><button class="btn cover-button fw-bolder">Get Started</button></a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/cover/cover-2.png" class="d-block w-100 cover-image" alt="...">
+                    <div class="carousel-caption d-flex flex-column align-items-center mb-5 ">
+                        <h2 class="display-4 w-75 fw-bolder">Get Started Digital
+                            Learning</h2>
+                        <p class="w-75">It is a long established fact that a reader will be distracted by the readable
+                            content of a page when looking at its layout.</p>
+                        <a href=""><button class="btn cover-button fw-bolder">Get Started</button></a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/cover/cover-3.png" class="d-block w-100 cover-image" alt="...">
+                    <div class="carousel-caption d-flex flex-column align-items-center mb-5 ">
+                        <h2 class="display-4 w-75 fw-bolder">Get Started Digital
+                            Learning</h2>
+                        <p class="w-75">It is a long established fact that a reader will be distracted by the readable
+                            content of a page when looking at its layout.</p>
+                        <a href=""><button class="btn cover-button fw-bolder">Get Started</button></a>
+                    </div>
+                </div>
 
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-    </nav>
-    <!-- navbar section end -->
+
+        <!-- carousel end -->
+    </header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
+    "></script>
 </body>
 
 </html>
