course section header

--- a/index.html
+++ b/index.html
@@ -103,6 +103,140 @@
 
         <!-- carousel end -->
     </header>
+    <main>
+
+        <!-- course section start -->
+
+        <section class="container section-margin">
+            <div class="row d-flex justify-content-center mb-3">
+                <div class="col-lg-5 col-md-12 col-12">
+                    <h2 class="text-center fw-bold display-5">Discover Our Popular
+                        Courses</h2>
+                    <p class="text-center">It is a long established fact that a reader will be distracted by the
+                        readable
+                        content of a page when looking at its layout.
+                    </p>
+                </div>
+            </div>
+            <div class="row row-cols-lg-2 row-cols-md-1 row-cols-1 g-3">
+                <!-- UI/UX Design course  -->
+                <div class="col">
+                    <div class="border rounded-4 px-0">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-12">
+                                <img class="w-100" src="images/course/course-1.png" alt="">
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-12 d-flex align-items-center p-3">
+                                <div>
+                                    <h5>Fundamental Of UI/UX Design</h5>
+                                    <p>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="price">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- javascript course -->
+                <div class="col">
+                    <div class="border rounded-4 px-0">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-12">
+                                <img class="w-100" src="images/course/course-2.png" alt="">
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-12 d-flex align-items-center p-3">
+                                <div>
+                                    <h5>Javascript Basic to advanced</h5>
+                                    <p>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="price">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Fullstack Web Development course -->
+                <div class="col">
+                    <div class="border rounded-4 px-0">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-12">
+                                <img class="w-100" src="images/course/course-3.png" alt="">
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-12 d-flex align-items-center p-3">
+                                <div>
+                                    <h5>Fullstack Web Development
+                                    </h5>
+                                    <p>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="price">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Digital Marketing course -->
+                <div class="col">
+                    <div class="border rounded-4 px-0">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-12">
+                                <img class="w-100" src="images/course/course-4.png" alt="">
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-12 d-flex align-items-center p-3">
+                                <div>
+                                    <h5>Digital Marketing</h5>
+                                    <p>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="price">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Photography Basic Rules course -->
+                <div class="col">
+                    <div class="border rounded-4 px-0">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-12">
+                                <img class="w-100" src="images/course/course-5.png" alt="">
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-12 d-flex align-items-center p-3">
+                                <div>
+                                    <h5>Photography Basic Rules
+                                    </h5>
+                                    <p>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="price">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Motion Graphics course -->
+                <div class="col">
+                    <div class="border rounded-4 px-0">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-12">
+                                <img class="w-100" src="images/course/course-6.png" alt="">
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-12 d-flex align-items-center p-3">
+                                <div>
+                                    <h5>Motion Graphics</h5>
+                                    <p>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="price">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-5 text-center">
+                <button class="btn cover-button fw-bolder">See More Courses</button></a>
+            </div>
+        </section>
+        <!-- course section end -->
+
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
     "></script>
 </body>
