--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                     </div>
                 </div>
             </div>
+            <!-- see more courses button -->
             <div class="mt-5 text-center">
                 <button class="btn cover-button fw-bolder">See More Courses</button></a>
             </div>
