course-details-complete

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="container">
         <!-- navbar section start -->
-        <nav class="navbar navbar-expand-lg sticky-top bg-transparent my-3">
+        <nav class="navbar navbar-expand-lg sticky-top bg-white my-3">
             <div class="container">
                 <a class="navbar-brand fw-bolder fs-2" href="#">Tech Savvy</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -57,8 +57,10 @@
 
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
+                <!-- carousel image -->
                 <div class="carousel-item active">
                     <img src="images/cover/cover-1.png" class="d-block w-100 cover-image" alt="...">
+                    <!-- carousel caption -->
                     <div class="carousel-caption d-flex flex-column align-items-center mb-5 ">
                         <h2 class="display-4 w-75 fw-bolder">Get Started Digital
                             Learning</h2>
@@ -67,8 +69,10 @@
                         <a href=""><button class="btn cover-button fw-bolder">Get Started</button></a>
                     </div>
                 </div>
+                <!-- carousel image -->
                 <div class="carousel-item">
                     <img src="images/cover/cover-2.png" class="d-block w-100 cover-image" alt="...">
+                    <!-- carousel caption -->
                     <div class="carousel-caption d-flex flex-column align-items-center mb-5 ">
                         <h2 class="display-4 w-75 fw-bolder">Get Started Digital
                             Learning</h2>
@@ -77,8 +81,10 @@
                         <a href=""><button class="btn cover-button fw-bolder">Get Started</button></a>
                     </div>
                 </div>
+                <!-- carousel image -->
                 <div class="carousel-item">
                     <img src="images/cover/cover-3.png" class="d-block w-100 cover-image" alt="...">
+                    <!-- carousel caption -->
                     <div class="carousel-caption d-flex flex-column align-items-center mb-5 ">
                         <h2 class="display-4 w-75 fw-bolder">Get Started Digital
                             Learning</h2>
@@ -108,6 +114,7 @@
         <!-- course section start -->
 
         <section class="container section-margin">
+            <!-- course header -->
             <div class="row d-flex justify-content-center mb-3">
                 <div class="col-lg-5 col-md-12 col-12">
                     <h2 class="text-center fw-bold display-5">Discover Our Popular
@@ -118,6 +125,7 @@
                     </p>
                 </div>
             </div>
+            <!-- course details -->
             <div class="row row-cols-lg-2 row-cols-md-1 row-cols-1 g-3">
                 <!-- UI/UX Design course  -->
                 <div class="col">
@@ -137,7 +145,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- javascript course -->
+                <!-- Javascript course -->
                 <div class="col">
                     <div class="border rounded-4 px-0">
                         <div class="row">
@@ -229,6 +237,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
             <!-- see more courses button -->
             <div class="mt-5 text-center">
