--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Savvy</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/8b66a4c7f7.js" crossorigin="anonymous"></script>
+
     <!-- bootstrap cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css
     ">
@@ -61,7 +64,7 @@
                 <div class="carousel-item active">
                     <img src="images/cover/cover-1.png" class="d-block w-100 cover-image" alt="...">
                     <!-- carousel caption -->
-                    <div class="carousel-caption d-flex flex-column align-items-center mb-5 ">
+                    <div class="carousel-caption d-flex h-100 flex-column justify-content-center align-items-center">
                         <h2 class="display-4 w-75 fw-bolder">Get Started Digital
                             Learning</h2>
                         <p class="w-75">It is a long established fact that a reader will be distracted by the readable
@@ -73,7 +76,8 @@
                 <div class="carousel-item">
                     <img src="images/cover/cover-2.png" class="d-block w-100 cover-image" alt="...">
                     <!-- carousel caption -->
-                    <div class="carousel-caption d-flex flex-column align-items-center mb-5 ">
+                    <div
+                        class="carousel-caption d-flex h-100 flex-column justify-content-center align-items-center mb-5 ">
                         <h2 class="display-4 w-75 fw-bolder">Get Started Digital
                             Learning</h2>
                         <p class="w-75">It is a long established fact that a reader will be distracted by the readable
@@ -85,7 +89,8 @@
                 <div class="carousel-item">
                     <img src="images/cover/cover-3.png" class="d-block w-100 cover-image" alt="...">
                     <!-- carousel caption -->
-                    <div class="carousel-caption d-flex flex-column align-items-center mb-5 ">
+                    <div
+                        class="carousel-caption d-flex h-100 flex-column justify-content-center align-items-center mb-5 ">
                         <h2 class="display-4 w-75 fw-bolder">Get Started Digital
                             Learning</h2>
                         <p class="w-75">It is a long established fact that a reader will be distracted by the readable
@@ -245,6 +250,65 @@
             </div>
         </section>
         <!-- course section end -->
+
+        <!-- registration section start -->
+        <section class="container section-margin">
+            <div class="bg-registration rounded-2 p-lg-4 p-md-2 p-3">
+                <div class="row d-flex justify-content-around">
+                    <div class="col-lg-6">
+                        <div class="text-lg-start text-md-center text-center">
+                            <h2>Ready to Join?</h2>
+                            <p>It is a long established fact that a reader will be distracted by the
+                                readable content of a page when looking at its layout.</p>
+                        </div>
+                    </div>
+                    <div
+                        class="col-lg-4 d-flex align-items-center justify-content-lg-end justify-content-md-center justify-content-center">
+                        <button type="button" class="btn btn-light fw-bolder reg-button " data-bs-toggle="modal"
+                            data-bs-target="#modalRegisterForm">
+                            Register Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header text-center">
+                            <h4 class="modal-title w-100 font-weight-bold">Sign up</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body mx-3">
+                            <div class="md-form mb-5">
+                                <i class="fas fa-user prefix grey-text"></i>
+                                <input type="text" id="orangeForm-name" class="form-control validate">
+                                <label data-error="wrong" data-success="right" for="orangeForm-name">Your name</label>
+                            </div>
+                            <div class="md-form mb-5">
+                                <i class="fas fa-envelope prefix grey-text"></i>
+                                <input type="email" id="orangeForm-email" class="form-control validate">
+                                <label data-error="wrong" data-success="right" for="orangeForm-email">Your email</label>
+                            </div>
+
+                            <div class="md-form mb-4">
+                                <i class="fas fa-lock prefix grey-text"></i>
+                                <input type="password" id="orangeForm-pass" class="form-control validate">
+                                <label data-error="wrong" data-success="right" for="orangeForm-pass">Your
+                                    password</label>
+                            </div>
+
+                        </div>
+                        <div class="modal-footer d-flex justify-content-center">
+                            <button class="btn reg-button">Sign up</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- registration section end -->
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
