--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                                 readable content of a page when looking at its layout.</p>
                         </div>
                     </div>
+                    <!-- registration button -->
                     <div
                         class="col-lg-4 d-flex align-items-center justify-content-lg-end justify-content-md-center justify-content-center">
                         <button type="button" class="btn btn-light fw-bolder reg-button " data-bs-toggle="modal"
@@ -270,6 +271,7 @@
                     </div>
                 </div>
             </div>
+            <!-- registration modal form -->
             <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -309,6 +311,108 @@
         </section>
 
         <!-- registration section end -->
+
+        <!-- frequently asked questions section start -->
+        <section class="container section-margin">
+            <!-- accordion header section -->
+            <div class="d-flex justify-content-center">
+                <div class="col-lg-6 col-md-12 col-12 mb-lg-3">
+                    <h2 class="text-center display-5 fw-bolder">Frequently Asked Questions</h2>
+                    <p class="text-center">It is a long established fact that a reader will be distracted by the
+                        readable
+                        content of a page when looking at its layout.</p>
+                </div>
+            </div>
+            <!-- accordion items section -->
+            <div class="d-flex justify-content-center">
+                <div class="col-lg-9 col-md-12 col-12">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    What's the difference between flex and grid?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox
+                                    was
+                                    designed for layout in one dimension - either a row or a column. Grid was designed
+                                    for
+                                    two-dimensional layout - rows, and columns at the same time.The approach of CSS Grid
+                                    is the layout first, while the Flexbox approach is primarily the content.The Flexbox
+                                    layout is best suited to application components and small-scale layouts, while the
+                                    Grid layout is designed for larger-scale layouts that are not linear in design.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    What's the difference between Bootstrap and Tailwind?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Bootstrap is a component-based framework, which means it comes with prebuilt
+                                    components and includes other utilities for layering displays, spacing,
+                                    etc.Tailwind, on the other hand, CSS is a utility-first framework. Using Tailwind
+                                    CSS is akin to writing regular CSS. Unlike Bootstrap, it has no prebuilt
+                                    components.With Bootstrap’s prebuilt components, there is little CSS for you to
+                                    write. As a result, subtle changes in the design could lead to hiccups. With
+                                    Tailwind CSS, you style your elements from scratch using Tailwind’s styling syntax.
+                                    It’s easier to make changes with Tailwind CSS because you only have to remove some
+                                    CSS classes.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What is CSS Box Model?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Every element that can be displayed on a web page is comprised of one or more
+                                    rectangular boxes. CSS box model typically describes how these rectangular boxes are
+                                    laid out on a web page. These boxes can have different properties and can interact
+                                    with each other in different ways, but every box has a content area and optional
+                                    surrounding padding, border, and margin areas.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What is semantic tag?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    The HTML semantics refers to the tags that provide meaning to an HTML page rather
+                                    than just presentation. It makes HTML more comprehensible by better defining the
+                                    different sections and layout of web pages.The core characteristic of a semantic
+                                    element is that it clearly communicated its meaning to both the developer and the
+                                    browser. These elements clearly define its content.The semantic HTML tags help the
+                                    search engines and other user devices to determine the importance and context of web
+                                    pages.It has greater accessibility. It offers a better user experience.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- frequently asked questions section end -->
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
