companies section complete

--- a/index.html
+++ b/index.html
@@ -414,6 +414,33 @@
         </section>
         <!-- frequently asked questions section end -->
 
+        <!-- partner companies section start -->
+
+        <section class="container section-margin d-lg-block d-md-none d-none">
+            <h2 class="display-5 text-center fw-bold mb-3">Trusted by over 800+ companies</h2>
+            <div class="row row-cols-6">
+                <div class="col">
+                    <img class="img-fluid" src="images/company/company-1.png" alt="">
+                </div>
+                <div class="col">
+                    <img class="img-fluid" src="images/company/company-2.png" alt="">
+                </div>
+                <div class="col">
+                    <img class="img-fluid" src="images/company/company-3.png" alt="">
+                </div>
+                <div class="col">
+                    <img class="img-fluid" src="images/company/company-4.png" alt="">
+                </div>
+                <div class="col">
+                    <img class="img-fluid" src="images/company/company-5.png" alt="">
+                </div>
+                <div class="col">
+                    <img class="img-fluid" src="images/company/company-6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- partner companies section end -->
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
     "></script>
