--- a/index.html
+++ b/index.html
@@ -442,6 +442,30 @@
         <!-- partner companies section end -->
 
     </main>
+    <!-- footer section start -->
+    <section class="container-fluid section-margin bg-dark ">
+        <footer class="text-center savvy-footer">
+            <h2 class="display-5 text-white fw-bold mb-3">Tech Savvy</h2>
+            <p class="text-white">Office 26, Concord Building, Nikunja-02,
+
+                <br> Khilkhet, Dhaka-1229
+            </p>
+            <p class="text-white">Privacy Ploicy | Terms of use</p>
+            <div>
+                <a class="text-white social-media fs-2 px-3" href="https://www.facebook.com/" target="_blank"><i
+                        class="fa-brands fa-square-facebook"></i></a>
+                <a class="text-white social-media fs-2 px-3" href="https://twitter.com/?lang=en" target="_blank"><i
+                        class="fa-brands fa-square-twitter"></i></a>
+                <a class="text-white social-media fs-2 px-3" href="https://www.linkedin.com/home" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>
+                <a class="text-white social-media fs-2 px-3" href="https://www.instagram.com/" target="_blank"><i
+                        class="fa-brands fa-square-instagram"></i></a>
+            </div>
+
+        </footer>
+
+    </section>
+    <!-- footer section end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
     "></script>
 </body>
