--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="carousel-inner">
                 <!-- carousel image -->
                 <div class="carousel-item active">
-                    <img src="images/cover/cover-1.png" class="d-block w-100 cover-image" alt="...">
+                    <img src="images/cover/cover-1.png" class=" cover-image" alt="...">
                     <!-- carousel caption -->
                     <div class="carousel-caption d-flex h-100 flex-column justify-content-center align-items-center">
                         <h2 class="display-4 w-75 fw-bolder">Get Started Digital
@@ -74,10 +74,9 @@
                 </div>
                 <!-- carousel image -->
                 <div class="carousel-item">
-                    <img src="images/cover/cover-2.png" class="d-block w-100 cover-image" alt="...">
+                    <img src="images/cover/cover-2.png" class="cover-image" alt="...">
                     <!-- carousel caption -->
-                    <div
-                        class="carousel-caption d-flex h-100 flex-column justify-content-center align-items-center mb-5 ">
+                    <div class="carousel-caption d-flex h-100 flex-column justify-content-center align-items-center">
                         <h2 class="display-4 w-75 fw-bolder">Get Started Digital
                             Learning</h2>
                         <p class="w-75">It is a long established fact that a reader will be distracted by the readable
@@ -87,10 +86,9 @@
                 </div>
                 <!-- carousel image -->
                 <div class="carousel-item">
-                    <img src="images/cover/cover-3.png" class="d-block w-100 cover-image" alt="...">
+                    <img src="images/cover/cover-3.png" class="cover-image" alt="...">
                     <!-- carousel caption -->
-                    <div
-                        class="carousel-caption d-flex h-100 flex-column justify-content-center align-items-center mb-5 ">
+                    <div class="carousel-caption d-flex h-100 flex-column justify-content-center align-items-center">
                         <h2 class="display-4 w-75 fw-bolder">Get Started Digital
                             Learning</h2>
                         <p class="w-75">It is a long established fact that a reader will be distracted by the readable
